# LCGBSS_based_on_endstone

./: .git_archival.txt  .gitmodules  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: (auto après 1)Build Wheel (module python).yml  (auto après release)Test apres Release.yml  1 Build+Test.yml  1-Build-Test.yml  1Build+Test.yml  Build Wheel (module python).yml  ci.yml  coverage.yml  wheel.yml  wheel.yml.txt  windows-portable(auto).yml
[#]LCG_I/: note.md  update.bat
[#]LC_S/: update.bat
include/endstone/event/weather/: weather_event.h
src/bedrock/: CMakeLists.txt
src/bedrock/world/level/dimension/: vanilla_dimensions.h
src/endstone/core/inventory/: item_factory.h
